--- a/Project.toml
+++ b/Project.toml
@@ -2,4 +2,5 @@
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Xranklin = "558449b0-171e-4e1f-900f-d076a5ddf486"
